--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
       "<rootDir>/setup-tests.js"
     ],
     "collectCoverageFrom": [
-      "<rootDir>/src/**/*.{js,ts,jsx,tsx}"
+      "<rootDir>/src/**/*.{js,ts,jsx,tsx}",
+      "!<rootDir>/src/main.tsx",
+      "!<rootDir>/src/vite-env.d.ts"
     ]
   }
 }
